Fixing a CSS issue when the talk title is too large

--- a/css/manage/talk.css
+++ b/css/manage/talk.css
@@ -7,3 +7,7 @@
 	height: 200px;
 	width: 450px;
 }
+
+#manage-talks .talk-title {
+	width: 400px;
+}
